linuxmuster-linbo (2.3.57-0) babo62; urgency=low

  * fork time sync to background.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 18 Feb 2020 10:13:41 +0100

linuxmuster-linbo (2.3.56-0) babo62; urgency=low

  * grub console output fix on operating system boot.
  * fix time sync output.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 03 Feb 2020 18:03:01 +0100

linuxmuster-linbo (2.3.55-0) babo62; urgency=low

  * merged pr #124 from netzint:master
  * lmn7: mkgrubhostimg.py, fixed parsing host variables
  * linbo_cmd: moved rsync ecludes to file /etc/rsync.exclude

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 31 Jan 2020 20:20:06 +0100

linuxmuster-linbo (2.3.54-0) babo62; urgency=low

  * update-linbofs: add server's timezone file to linbofs.
  * init.sh: syncs time from server on linbo start.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 06 Dec 2019 11:32:55 +0100

linuxmuster-linbo (2.3.53-0) babo62; urgency=low

  * Fix #118: mount fallback.
  * Fix #117: start.conf are found on the lokal storage.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 14 Nov 2019 21:02:21 +0100

linuxmuster-linbo (2.3.52-0) babo62; urgency=low

  * Fix #115: Backup and restore of supplementalCredentials.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 17 Sep 2019 21:23:59 +0200

linuxmuster-linbo (2.3.51-0) babo62; urgency=low

  * improved swapfile excludes during image build.
  * splitted start.conf examples for lmn62 and lmn7.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 17 Jul 2019 16:04:59 +0200

linuxmuster-linbo (2.3.50-0) babo62; urgency=low

  * fixed user access rights for linuxmuster-win scripts on ntfs filesystems (#113).
  * lmn7 only: fixed missing function get_mac() in helperfunctions.sh (#112).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 09 Jul 2019 11:37:52 +0200

linuxmuster-linbo (2.3.49-0) babo62; urgency=low

  * added warning to start.conf examples (#111) and translated them to english.