@@ -1,3 +1,11 @@
+linuxmuster-linbo (2.3.58-0) babo62; urgency=low
+
+  * lmn7:
+    - fix #126: support for dynamic ip hosts.
+    - helperfunctions and rsync xfer scripts improvements.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 14 Apr 2020 17:23:32 +0200
+
 linuxmuster-linbo (2.3.57-0) babo62; urgency=low
 
   * fork time sync to background.
